  environ was changed from ``bfg.route`` to ``bfg.routes.route``.

- Finding the root is now done *before* manufacturing a request object
  (and sending a new request event) within the router (it used to be
  performed afterwards).

Bug Fixes
---------

- The ``bfg_alchemy`` Paster template named "repoze.tm" in its
  pipeline rather than "repoze.tm2", causing the startup to fail.

Documentation
-------------

- Added a (fairly sad) "Combining Traversal and URL Dispatch" chapter
  to the narrative documentation.

- A "router" chapter explaining the request/response lifecycle at a
  high level was added.

- Replaced all mentions and explanations of a routes "context factory"
  with equivalent explanations of a "root factory" (context factories
  have been disused).

- Updated Routes bfgwiki2 tutorial to reflect the fact that context
  factories are now no longer used.

0.9.1 (2009-06-02)
==================

Features
--------

- Add API named ``repoze.bfg.settings.get_settings`` which retrieves a
  derivation of values passed as the ``options`` value of
  ``repoze.bfg.router.make_app``.  This API should be preferred
  instead of using getUtility(ISettings).  I added a new
  ``repoze.bfg.settings`` API document as well.

Bug Fixes
---------

- Restored missing entry point declaration for bfg_alchemy paster
  template, which was accidentally removed in 0.9.

Documentation
-------------

- Fix a reference to ``wsgiapp`` in the ``wsgiapp2`` API documentation
  within the ``repoze.bfg.wsgi`` module.

API Removals
------------

- The ``repoze.bfg.location.locate`` API was removed: it didn't do
  enough to be very helpful and had a misleading name.

0.9 (2009-06-01)
================

Bug Fixes
---------

- It was not possible to register a custom ``IRoutesContextFactory``
  for use as a default context factory as documented in the "Hooks"
  chapter.

Features
--------

- The ``request_type`` argument of ZCML ``view`` declarations and